Think I just need to fine-tune that figureg

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -201,7 +201,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         \end{equation}
   
 
-    Note that $\lambda$ is not a single point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible ($L = 1$). If $n>k>0$, the interaction is feasible but there may be local constraints ($X = 0$) or detection errors ($D<1$) causing the interaction not to be observed in some samples. 
+    Note that $\lambda$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible ($L = 1$). If $n>k>0$, the interaction is feasible but there may be local constraints ($X = 0$) or detection errors ($D<1$) causing the interaction not to be observed in some samples. 
 
 
     To properly interpret $\lambda$, we need to estimate the variance as well as the MLE. The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$) and, importantly, describes the variability of the number of successes $k$ for $n$ trials rather than the variance associated with the estimation of $\lambda$. It is, however, straightforward to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). 
@@ -250,18 +250,18 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
       Parameters $\alpha$ and $\beta$ determine the shape of the prior distribution of $\lambda$, which follows a beta distribution. These are called hyper parameters. The prior may be chosen to be uninformative, if no external information is available, or may draw on information such as distributions of connectance across webs, degree distributions, or trait-matching functions (see \emph{Appendix S2} for details and a simple quantitative example). 
 
 
-      When using an informative prior, it is important to ensure that this prior accurately reflects the focal  system. For example, if the focal system is a large network containing many plant species and insects from different families, it is inappropriate to use a prior distribution drawn from a small network describing interactions between different genotypes of a single plant species with a set of closely-related insects. The similarity of traits across genotypes within a species means that an insect which interacts with one genotype is likely to interact with many others. Trait differences between species mean that a species-species network will likely contain fewer interactions than a genotype-species network. Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
+      It is important to ensure that an informative prior accurately reflects the focal  system. For example, if the system is a large network containing many plant species and insects from different families, it is inappropriate to use a prior distribution drawn from a small network describing interactions between different genotypes of a single plant species and a set of closely-related insects. The similarity of traits across genotypes within a species means that an insect which interacts with one genotype is likely to interact with many others. Trait differences between species mean that a species-species network will likely contain fewer interactions than a genotype-species network. Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
 
 
-      The choice of prior will depend on the information available. In general, it is best to use a prior taken from a similar system as emphasized above. If such data are not available, a prior based on many networks systems with a similar level of resolution could be useful, as could a prior based on a preliminary round of sampling (analogous to ``training data"). If there is no suitable informative prior, it is best to use an explicitly uninformative prior. While an uninformative prior will not greatly reduce variance about $\lambda$, it does clearly state our lack of prior knowledge and will not bias our conclusions.
+      The choice of prior will depend on the information available. In general, it is best to use a prior taken from a similar system as emphasized above. If such data are not available, a prior based on many networks with a similar level of resolution could be useful, as could a prior based on a preliminary round of sampling (analogous to ``training data"). If there is no suitable informative prior, it is best to use an explicitly uninformative prior. While an uninformative prior will not greatly reduce variance about $\lambda$, it does clearly state our lack of prior knowledge and will not bias our conclusions.
 
 
   \subsection*{An empirical example}
 
-      To illustrate the process of constructing a Bayesian network, we use the well-sampled system of willow (\emph{Salix}) species, herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The data were collected over 29 years at 374 unique locations across Europe. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S3} for details). 
+      To illustrate the process of constructing a Bayesian network, we use the well-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The data were collected over 29 years at 374 unique locations across Europe. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S3} for details). 
 
 
-      The high spatiotemporal resolution and unusally high sampling effort of this dataset make it particularly well suited for illustrating the difficulties in completely sampling a network. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S4} for \emph{Salix}-galler results). 
+      The high spatiotemporal resolution and unusally high sampling effort of this dataset make it well suited for illustrating the difficulties in completely sampling a network. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S4} for \emph{Salix}-galler results). 
 
 
     \subsubsection*{Computing the prior and posterior distributions}
@@ -269,7 +269,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         To treat each interaction as a Bayesian probability, we will combine the observed data with a distribution based on prior information. A strict Bayesian framework requires a prior distribution that does not rely on any information from the study at hand. If such data are not available, one might instead use the first sub-network collected as ``training data" to guide future sampling. To simulate this situation, we created priors using a single sub-network from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset. To demonstrate how the use of data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller \emph{Salix}-galler-natural enemy system based around genotypes of a single \emph{Salix} species~\citep[Data available from the Dryad Digital Repository: https://doi.org/10.5061/dryad.g7805]{Barbour2016}\nocite{Barbour2016Dryad}. This smaller system was much more densely-connected than that described in~\citet{Kopelke2017} and provided unreasonable distributions for interaction probabilities (\emph{Appendix S5}). 
 
 
-        To obtain priors based on a single sub-network --Zillis in Graub\"{u}nchen, Switzerland-- we estimated frequencies of interactions based on the normalised degree of each species in each network component (see \emph{Appendix S6} for details and code). Using these prior parameters, we then estimated the posterior distributions of interaction probabilities $\lambda$. For species without observed interactions ($n = 0$), the posterior distribution is identical to the prior distribution. For species where $n>0$, we can update the prior distribution with data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs. This gives $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. We calculated posterior distributions and 95\% credible intervals (see function ``credible\_interval";~\emph{Appendix S7}) for species with $n$ ranging between 0 and 374, the total number of sites in our dataset. 
+        To obtain priors based on a single sub-network --Zillis in Graub\"{u}nchen, Switzerland-- we estimated frequencies of interactions based on the normalised degree of each species in each network component (see \emph{Appendix S6} for details and code). Using these prior parameters, we then estimated the posterior distributions of interaction probabilities $\lambda$. For species without observed interactions ($n = 0$), the posterior distribution is identical to the prior distribution. For species where $n>0$, we can update the prior distribution with data. If we consider only pairs of species which were observed co-occurring but not interacting, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs. This gives $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. We calculated posterior distributions and 95\% credible intervals (see function ``credible\_interval";~\emph{Appendix S7}) for species with $n$ ranging between 0 and 374, the total number of sites in our dataset. 
 
 
         Rather than calculating credible intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. We calculated the number of samples required to reach 95\% confidence that $\lambda$ was below thresholds of 0.1, 0.05, and 0.01 as examples (see function ``samples\_for\_threshold";~\emph{Appendix S7}).
@@ -277,7 +277,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsubsection*{Scaling up to network metrics}
 
-      Researchers usually use interaction matrices as a tool to calculate measures of network structure. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results. One way to avoid this situation is to calculate the properties of a suite of simulated networks.
+      Researchers usually use interaction matrices as a tool to calculate measures of network structure. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S8}). One way to avoid this situation is to calculate the properties of a suite of simulated networks.
 
 
       Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting, we created a suite of 100 webs by randomly sampling from each posterior distribution. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. To demonstrate how these network metrics will be affected by detection uncertainty, we then created a suite of filtered networks for each posterior network. Networks were filtered by randomly sampling 99\%, 95\%, 90\%, 80\%, 70\%, 60\%, and 50\% of the interactions included in each posterior network. This gradient is akin to a gradient of sampling effort. For each level of detection accuracy, we created 100 randomly-sampled networks per posterior-probability network (giving 100 posterior networks and 1000 detection-filtered networks). We calculated the same network properties as described above for all posterior and detection-filtered networks.
@@ -285,30 +285,30 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Results}
 
-  Most pairs of species (9,794/12,096 galler-natural enemy pairs) were never found co-occurring and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87; Fig.~\ref{histograms}A). The bulk of these co-occurring species pairs were never observed to interact: only 7.76\% of galler-natural enemy pairs were observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04; Fig.~\ref{histograms}B) and tended to be lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
+  Most pairs of species (9,794/12,096) never co-occurred and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87; Fig.~\ref{histograms}A). The bulk (92.24\%) of these co-occurring species pairs were never observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04; Fig.~\ref{histograms}B) and was lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
 
 
   We obtained prior parameters of $\alpha$=0.700, $\beta$=8.49. Where $n = 0$, these parameters gave a posterior distribution with $\bar\lambda$=0.076, var($\lambda$)=0.008. When $n = 374$, we obtained a posterior distribution with $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76. This distributions is very close to 0 with small variance about $\lambda$; if species $i$ and $j$ co-occurred 374 times without interacting, they   are extremely unlikely to do so at other sites or times. 
 
 
-  For most pairs of species $i$ and $j$, however, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs_cdfs};~\emph{Appendix S8}). The number of samples required to be 95\% confident that the interaction probability between galler and natural enemy species is below a threshold increases quickly as the threshold decreases (Fig.~\ref{Salix_pdfs_cdfs};~\emph{Appendix S8}). To be 95\% confident that the probability of interaction is below 0.1, 0.05, or 0.01 would require 15, 39, and 229 observed co-occurrences, respectively. Note that these are relatively large sample sizes compared to currently-available empirical networks~\citep{Morris2014}.
+  For most pairs of species $i$ and $j$, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs_cdfs};~\emph{Appendix S9}). To be 95\% confident that the probability of interaction is below 0.1, 0.05, or 0.01 would require 15, 39, and 229 observed co-occurrences, respectively. Note that these are relatively large sample sizes compared to currently-available empirical networks~\citep{Morris2014}.
 
 
-  Scaling up to network structure, we found that the connectance, mean links per galler, and mean links per natural enemy were much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.186 $\leq$ C $\leq$ 0.198, 13.4 $\leq L_{galler} \leq$ 14.6, and 23.4 $\leq L_{natural enemy} \leq$ 25.0). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}A,B,D). Nestedness was higher in the observed network (NODF=6.85) than in the posterior webs (6.31 $\leq NODF \leq$ 6.82; Fig.~\ref{posterior_webs}C); in this case, the stronger the detection filter, the farther apart were the observed and posterior webs. In general, the observed network is most similar to simulated networks where only half of the plausible links are detected. 
+  Scaling up to network structure, we found that the connectance and mean links per galler and natural enemy were much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.186 $\leq$ C $\leq$ 0.198, 13.4 $\leq L_{galler} \leq$ 14.6, and 23.4 $\leq L_{natural enemy} \leq$ 25.0). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}A,B,D). Nestedness was higher in the observed network (NODF=6.85) than in the posterior webs (6.31 $\leq NODF \leq$ 6.82; Fig.~\ref{posterior_webs}C); in this case, the stronger the detection filter, the farther apart were the observed and posterior webs. In general, the observed network is most similar to simulated networks where only half of the plausible links are detected. 
 
 
 \section*{Discussion}
 
-  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to reach the threshold for an interaction probability of 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks. This dataset also illustrates the problem of process uncertainty - pairs of species which were observed to interact did not interact in all of the samples in which they co-occurred. As such, increasing sampling is likely to add more zeros than ones to an interaction network.
+  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks. This dataset also illustrates the problem of process uncertainty - pairs of species which were observed interacting did not interact in all of the samples in which they co-occurred. Increasing sampling is therefore likely to add more zeros than ones to an interaction network.
 
 
-  Using prior knowledge to build a Bayesian distribution for each interaction probability allows us to set appropriate bounds on interaction probabilities for species which were rarely or never observed co-occurring. In such cases, an informative prior distribution gives us more reasonable estimates of interacition probabilities than assuming that no unobserved interactions can ever occur. This approach will also be useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
+  Using prior knowledge to build a Bayesian distribution for each interaction probability allows us to set appropriate bounds on interaction probabilities for species which were rarely or never observed co-occurring. In such cases, an informative prior distribution gives us more reasonable estimates of interaction probabilities than assuming that $p$=0 for unobserved interactions. This approach is particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
 
 
   Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. If our descriptions of empirical systems are missing up to half of the feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
 
 
-  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, where sampling on the order of 30-50 observations per species pair is not possible (i.e., in most cases), researchers should acknowledge the varying levels of confidence surrounding interactions between different species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to estimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
+  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, where sampling on the order of 30-50 observations per species pair is not possible (i.e., in most cases), researchers should acknowledge the varying levels of confidence surrounding interactions between different species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to ezostimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
 
 
 \section*{Acknowledgements}
@@ -346,10 +346,13 @@ All data used in this study have been independently published and are accessible
 % \clearpage
 
   \begin{figure}[h!]
-    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Beginning with a true interaction matrix (top left) of zeros (interactions that cannot occur, white) and ones (interactions that do occur, black), each level of uncertainty adds more zeros. Interaction uncertainty refers to the fact that some interactions are more likely than others based on species' traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions. Process uncertainty further reduces the probability of observing an interaction as not every interaction occurs during each sampling period. We show six example interaction matrices representing interactions observed over two days at three sites. The probability of observing an interaction now reflects the rarity of each interaction occurring during a given sampling day. Detection uncertainty reflects the fact that not all interactions are equally detectable. For example, rare species may be hard to find and follow in the field. After applying these three layers of uncertainty, some of the interactions which truly occur are very unlikely to be observed. An observed matrix sampled based on this matrix (lower left) is likely to contain far fewer interactions than the original, true matrix.}
+    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Interaction uncertainty means that some inteactions that truly occur (black squares in True matrix) are less likely than others (grey squares) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions and assign this interaction a probability of 0.\\
+    Process uncertainty describes the fact that interactions occur with different probabilities during any given sample. We show six example networks representing interactions observed over two days at three sites. Interactions which occur during fewer sampling days are less likely to be observed.\\
+    Detection uncertainty reflects the fact that not all interactions are equally detectable. For example, interactions involving cryptic species are less likely to be seen.\\
+    After applying these three layers of uncertainty, some interactions which truly occur are very unlikely to be observed. An observed matrix sampled based on this matrix (lower left) is thus likely to contain far fewer interactions than the original, true matrix.}
     \label{conceptual_fig}
     \begin{center}
-    \includegraphics*[height=.6\textheight]{figures/conceptual_fig.eps}
+    % \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
     \end{center}
     \end{figure}
 
@@ -360,16 +363,16 @@ All data used in this study have been independently published and are accessible
       \textbf{C)} Here we show, for each species pair, the number of observed interactions plotted against the number of observed co-occurrences. The red, dashed line indicates a 1:1 relationship between interactions and co-occurrences.}
       \label{histograms}
       \begin{center}
-      \includegraphics*[height=.6\textheight]{figures/GP_histogram.eps}
+      % \includegraphics*[height=.6\textheight]{figures/GP_histogram.eps}
       \end{center}
       \end{figure}
 
 
   \begin{figure}[h!]
-    \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction does not occur. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution. Here we show the upper bound (solid black line) of a 95\% Cloper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high. }
+    \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution. Here we show the upper bound (solid black line) of a 95\% Cloper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high. }
     \label{upper_limits}
     \begin{center}
-    \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
+    % \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
     \end{center}
     \end{figure}
 
@@ -380,7 +383,7 @@ All data used in this study have been independently published and are accessible
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. The number of samples required to obtain a 95\% credible interval below each threshold increases rapidly. It takes just over 20 observed co-occurrences to be 95\% confident that $\lambda<0.10$, approximately 50 co-occurrences to be 95\% confident that $\lambda<0.05$, and over 100 co-occurrences to be 95\% confident that $\lambda<0.01$.}
     \label{Salix_pdfs_cdfs}
     \begin{center}
-    \includegraphics*[width=.8\textwidth]{figures/GP_pdfs_increasing_N_Zillis.eps}
+    % \includegraphics*[width=.8\textwidth]{figures/GP_pdfs_increasing_N_Zillis.eps}
     \end{center}
     \end{figure}
 
@@ -398,7 +401,7 @@ All data used in this study have been independently published and are accessible
     \caption{Mean connectance, links per galler, nestedness (NODF), and links per natural enemy for networks assembled using posterior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017} occupied a narrow range. To obtain distributions of network properties, we created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean (+/- SD) network property (e.g., connectance) obtained from a set of 100 detection-filter networks. The detection-filter networks cover a broader range of network properties than the posterior-sampling networks but the value of each property decreases as the strength of the detection filter increases. Values in the original web are indicated by dashed lines.}
     \label{posterior_webs}    
     \begin{center}
-    \includegraphics[width=.8\textwidth]{figures/GP_posterior_properties_Zillis.eps}
+    % \includegraphics[width=.8\textwidth]{figures/GP_posterior_properties_Zillis.eps}
     \end{center}
     \end{figure}
 
